--- a/src/index.css
+++ b/src/index.css
@@ -1,149 +1,150 @@
-@import url('https://fonts.googleapis.com/css2?family=M+PLUS+Code+Latin:wght@400;600&display=swap');
+@import url("https://fonts.googleapis.com/css2?family=M+PLUS+Code+Latin:wght@400;600&display=swap");
 
 :root {
-    --bg-color: #FCFCFA;
-    --border-color: #542D16;
-    --inner-border-color: #DFA08F;
-    --shadow-color: #F7E5DB;
-    --font: 'M PLUS Code Latin', sans-serif;
+  --bg-color: #fcfcfa;
+  --border-color: #542d16;
+  --inner-border-color: #dfa08f;
+  --shadow-color: #f7e5db;
+  --font: "M PLUS Code Latin", sans-serif;
 }
 
-html, body {
-    background-color: var(--bg-color);
-    color: var(--border-color);
-    height: 100%;
-    font-family: var(--font);
+html,
+body {
+  background-color: var(--bg-color);
+  color: var(--border-color);
+  height: 100%;
+  font-family: var(--font);
 }
 
 .container {
-    text-align: center;
-    margin-top: 10em;
+  text-align: center;
+  margin-top: 10em;
 }
 
 .times-button-container {
-    width: 250px;
-    margin: 0 auto;
+  width: 250px;
+  margin: 0 auto;
 }
 .times-button {
-    display: inline-block;
-    font-size: 1.5em;
-    border: var(--border-color) solid 8px;
-    border-radius: 10px;
-    box-shadow: 4px 4px 0px 4px var(--shadow-color);
-    margin: 0.5em;
-    padding: 0.5em;
-    font-weight: bold;
-    width: 55px;
+  display: inline-block;
+  font-size: 1.5em;
+  border: var(--border-color) solid 8px;
+  border-radius: 10px;
+  box-shadow: 4px 4px 0px 4px var(--shadow-color);
+  margin: 0.5em;
+  padding: 0.5em;
+  font-weight: bold;
+  width: 55px;
 }
 
 .times-button-wider {
-    width: 170px;
+  width: 170px;
 }
 
 .times-button-container a {
-    color: var(--border-color);
-    text-decoration: none;
+  color: var(--border-color);
+  text-decoration: none;
 }
 
 .subheader {
-    opacity: 0.75;
+  opacity: 0.75;
 }
 
 .cool-guy-calc {
-    margin: 0 auto;
-    background-color: var(--bg-color);
-    width: 250px;
-    height: 160px;
-    border: var(--border-color) solid 8px;
-    border-radius: 10px;
-    box-shadow: 4px 4px 0px 4px var(--shadow-color);
+  margin: 0 auto;
+  background-color: var(--bg-color);
+  width: 250px;
+  height: 160px;
+  border: var(--border-color) solid 8px;
+  border-radius: 10px;
+  box-shadow: 4px 4px 0px 4px var(--shadow-color);
 }
 
 .stats {
-    font-size: 1.5em;
-    margin: 0 auto 1em;
-    font-family: var(--font);
-    width: 250px;
-    font-weight: bolder;
-    opacity: 0.75;
+  font-size: 1.5em;
+  margin: 0 auto 1em;
+  font-family: var(--font);
+  width: 250px;
+  font-weight: bolder;
+  opacity: 0.75;
 }
 
 .counter {
-    width: 50%;
-    display:inline-block;
-    text-align: left;
+  width: 50%;
+  display: inline-block;
+  text-align: left;
 }
 
 .timer {
-    width: 50%;
-    display:inline-block;
-    text-align: right;
+  width: 50%;
+  display: inline-block;
+  text-align: right;
 }
 
 .screen {
-    border: var(--inner-border-color) solid 8px;
-    height: 144px;
-    border-radius: 1px;
+  border: var(--inner-border-color) solid 8px;
+  height: 144px;
+  border-radius: 1px;
 }
 
 .reaction {
-    font-size: 2em;
-    height: 72px;
-    overflow: hidden;
-    margin-top: 0.8em;
-    font-family: var(--font);
-    font-weight: bolder;
+  font-size: 2em;
+  height: 72px;
+  overflow: hidden;
+  margin-top: 0.8em;
+  font-family: var(--font);
+  font-weight: bolder;
 }
 
 .lives {
-    font-size: 1.5em;
+  font-size: 1.5em;
 }
 
 .question-container {
-    width:250px;
-    margin: 1em auto 0;
-    text-align: left;
-    font-family: var(--font);
-    font-size: 3em;
-    padding-left: 0.75em;
-    font-weight: bold;
+  width: 250px;
+  margin: 1em auto 0;
+  text-align: left;
+  font-family: var(--font);
+  font-size: 3em;
+  padding-left: 0.75em;
+  font-weight: bold;
 }
 .answer input {
-    border: 0;
-    font-family: var(--font);
-    font-size: 1em;
-    font-weight: bold;
-    width: 50%;
-    outline: none;
-    background-color: var(--bg-color);
-    color: var(--border-color);
+  border: 0;
+  font-family: var(--font);
+  font-size: 1em;
+  font-weight: bold;
+  width: 50%;
+  outline: none;
+  background-color: var(--bg-color);
+  color: var(--border-color);
 }
 
 .restart {
-    margin: 0.75em 0.25em 0em 0.25em;
-    font-family: var(--font);
-    font-size: 3em;
-    font-weight: bold;
-    cursor: pointer;
-    display: inline-block;
+  margin: 0.75em 0.25em 0em 0.25em;
+  font-family: var(--font);
+  font-size: 3em;
+  font-weight: bold;
+  cursor: pointer;
+  display: inline-block;
 }
 
 .restart a {
-    text-decoration: none;
-    color: var(--border-color);
+  text-decoration: none;
+  color: var(--border-color);
 }
 
 .restart-message {
-    font-family: var(--font);
-    margin-top: 0.5em;
-    font-size: 1.5em;
-    font-weight: bold;
+  font-family: var(--font);
+  margin-top: 0.5em;
+  font-size: 1.5em;
+  font-weight: bold;
 }
 
 .lives {
-    color: var(--inner-border-color);
+  color: var(--inner-border-color);
 }
 
 .depleted {
-    opacity: 0.25;
+  opacity: 0.25;
 }
